fixed java 1.3 compatability